jaeger/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-otlp-http
  namespace: jaeger
spec:
  rules:
    - host: jaeger-otlp.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: jaeger-collector
                port:
                  name: otlp-http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-otlp-grpc
  namespace: jaeger
spec:
  rules:
    - host: jaeger-otlp-grpc.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: jaeger-collector
                port:
                  name: otlp-grpc
